# wx-app

./: .gitignore  CMakeLists.txt  README.md
inc/: App.h  MainFrame.h
src/: App.cpp  MainFrame.cpp  main.cpp
